# koina

./: .devcontainer.json  .dockerignore  .env  .env.ci  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-cpu-ucr.yml  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yml  entrypoint.sh  getModels.sh  koina_build_proxy.sh  koina_build_ui.sh  koina_format.sh  koina_lint.sh  koina_test.sh  koina_wait.sh
clients/python/: .pylintrc  .python-version  README.md  noxfile.py  pyproject.toml  setup.py
clients/python/koinapy/: __init__.py  __main__.py  grpc.py
clients/python/test/: lib.py
clients/python/test/3dmolms/: README.md  arr_3dmolms_env.npy  test_3dmolms.py  test_3dmolms_from_arr.py  test_3dmolms_from_raw.py  test_3dmolms_from_raw_modified.py  test_ensemble.py
clients/python/test/AlphaPept/: arr-AlphaPept_Preprocess_instrument_types-instrument_types.npy  arr-AlphaPept_Preprocess_instrument_types-instrument_types_encoding.npy  arr-AlphaPept_ccs_generic-ccs.npy  arr-AlphaPept_ccs_generic-peptide_sequences.npy  arr-AlphaPept_ccs_generic-precursor_charges.npy  arr-AlphaPept_ccs_generic_core-charges__2.npy  arr-AlphaPept_ccs_generic_core-mod_x__1.npy  arr-AlphaPept_ccs_generic_sb-ccs.npy  arr-AlphaPept_ccs_generic_sb-peptide_sequences.npy  arr-AlphaPept_ccs_generic_sb-precursor_charges.npy  arr-AlphaPept_ms2_generic-annotation.npy  arr-AlphaPept_ms2_generic-collision_energies.npy  arr-AlphaPept_ms2_generic-instrument_types.npy  arr-AlphaPept_ms2_generic-intensities.npy  arr-AlphaPept_ms2_generic-mz.npy  arr-AlphaPept_ms2_generic-precursor_charges.npy  arr-AlphaPept_ms2_generic_core-NCEs__3.npy  arr-AlphaPept_ms2_generic_core-instrument_indices__4.npy  arr-AlphaPept_ms2_generic_sb-annotation.npy  arr-AlphaPept_ms2_generic_sb-instrument_types.npy  arr-AlphaPept_ms2_generic_sb-mz.npy  arr-AlphaPept_ms2_generic_sb-peptide_sequences.npy  arr-AlphaPept_ms2_generic_sb_intensity.npy  arr-AlphaPept_rt_generic-irt.npy  arr-AlphaPept_rt_generic-peptide_sequences.npy  arr-AlphaPept_rt_generic_core-aa_indices__0.npy  arr-AlphaPept_rt_generic_core-output__0.npy  arr-AlphaPept_rt_generic_sb-irt.npy  arr_AlphaPept_ccs_mb.npy  arr_AlphaPept_ccs_raw.npy  arr_AlphaPept_irt.npy  arr_AlphaPept_irt_mb.npy  arr_AlphaPept_rt_mod.npy  test_AlphaPept_Preprocess_instrument_types.py  test_AlphaPept_ccs_generic.py  (+3 more)
(+1028 files in other folders)
