[tool.poetry]
name = "koinapy"
version = "0.0.10"
description = "Python client to communicate with Koina."
authors = ["Koina Developers"]
license = "Apache 2.0"
homepage = "https://koina.wilhelmlab.org/"
repository = "https://github.com/wilhelm-lab/koina"
documentation = "https://koina.wilhelmlab.org"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
tqdm = "*"
pandas = "*"
tritonclient = [
    {extras = ["grpc"], version = "!=2.41", python=">=3.8,<=3.11"},
    {extras = ["grpc"], version = ">=2.23", python=">=3.8,<3.11"},
    {extras = ["grpc"], version = ">=2.42", python=">=3.11"}
]

[tool.poetry.group.develop.dependencies]
pytest = "*"
pylint = "*"
requests = "*"
black = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
